clang/test/BSC/Negative/Trait/r3/function_param_is_trait/function_param_is_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F{};
void foo1(_Trait F f);  // expected-error {{only _Trait pointer type is allowed to be declared}}
_Trait F foo2(_Trait F f) {  // expected-error {{only _Trait pointer type is allowed to be declared}} // expected-error {{only _Trait pointer type is allowed to be declared}}
    _Trait F f1 = f; // expected-error {{only _Trait pointer type is allowed to be declared}}
    return f1; // expected-error {{use of undeclared identifier 'f1'}}
}
void (*call1)(_Trait F f); // expected-error {{only _Trait pointer type is allowed to be declared}}
void int::foo3(int* this, _Trait F f); // expected-error {{only _Trait pointer type is allowed to be declared}}

_Trait G<T> {};
void foo4(_Trait G<T> g); // expected-error {{use of undeclared identifier 'T'}}
void foo5<T>(_Trait G<T> g); // expected-error {{only _Trait pointer type is allowed to be declared}}
void(*call2)(_Trait G<T> g); // expected-error {{use of undeclared identifier 'T'}}
void int::foo6(int* this, _Trait G<T> g);  // expected-error {{use of undeclared identifier 'T'}}

void foo7(_Trait G<int> g);  // expected-error {{only _Trait pointer type is allowed to be declared}}
void (*call3)(_Trait G<int> g); // expected-error {{only _Trait pointer type is allowed to be declared}}
void int::foo8(int* this, _Trait G<int> g); // expected-error {{only _Trait pointer type is allowed to be declared}}